# buryatvpn

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  backup_db.py  bot.py  docker-compose.yml  first_start.py  pyproject.toml  requirements-dev.txt  requirements.txt  update_db.py
app/: __init__.py  main.py
app/api/: main.py  middleware.py
app/api/routes/: __init__.py  admin.py  auth.py  users.py
app/bot/: main.py
app/bot/handlers/: __init__.py  commands.py
app/bot/keyboards/: user_keyboards.py
app/bot/middlewares/: __init__.py  auth.py  rate_limit.py
app/bot/utils/: messages.py
app/core/: cache.py  exceptions.py  monitoring.py  security.py
app/database/: connection.py  models.py
app/database/repositories/: base.py  subscription_repository.py  user_repository.py
app/services/: user_service.py
config/: logging.py  settings.py
docs/: ADMIN_GUIDE.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  INSTALL.md  README.md
handlers/: buy_subscribe.py  commands.py  crypto_pay.py  database.py  promocode.py  sub_scheduler.py  tariff.py  x_ui.py  yookassa.py
handlers/admin/: admin_answer.py  admin_cryptopay.py  admin_get_pay_code.py  admin_kb.py  admin_notification.py  admin_notify_edit.py  admin_pay_code.py  admin_promo_send.py  admin_promo_tariff.py  admin_promo_tariff_add.py  admin_promocodes.py  admin_reset_trial.py  admin_send_notify.py  admin_server_add.py  admin_server_del.py  admin_support.py  admin_tariff.py  admin_tariff_add.py  admin_trial.py  admin_trial_add.py  admin_trial_del.py  admin_unban.py  admin_user_del.py  admin_users.py  admin_yookassa.py
handlers/user/: merge_sub.py  unknown_messages.py  user_cryptopay.py  user_help.py  user_kb.py  user_lk.py  user_lk_sub.py  user_pay_code.py  user_show_statistic.py  user_support.py
instance/: database.db
migrations/: alembic.ini  env.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: buryatvpn-dashboard.json
scripts/: install.sh
tests/: conftest.py  test_user_service.py
web-module/: .env  app.py  check_schema.py  requirements.txt
web-module/handlers/: admin.py  messages.py  payments.py  promocodes.py  servers.py  settings.py  tariffs.py  trial_settings.py  users.py
web-module/project/: index.html  vite.config.ts
web-module/project/src/: App.tsx
web-module/static/css/: custom.css
web-module/templates/: base.html  index.html  login.html
web-module/templates/admin/: dashboard.html  messages.html  payments.html  promocodes.html  servers.html  settings.html  tariffs.html  users.html  (+1 more)
(+5 files in other folders)
